--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -38,6 +38,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EasyCaptcha.Wpf, Version=0.9.0.3, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\EasyCaptcha.Wpf.0.9.0.3\lib\net45\EasyCaptcha.Wpf.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -190,9 +193,23 @@
       <DependentUpon>DBDemo.edmx</DependentUpon>
       <LastGenOutput>DBDemo.cs</LastGenOutput>
     </Content>
+    <None Include="Resources\picture.png" />
+    <None Include="Resources\А112Т4.jpg" />
+    <None Include="Resources\G598Y6.jpg" />
+    <None Include="Resources\G403T5.jpg" />
+    <None Include="Resources\F937G4.jpg" />
+    <None Include="Resources\F746E6.jpg" />
+    <None Include="Resources\F735B6.jpg" />
+    <None Include="Resources\E324U7.jpg" />
+    <None Include="Resources\D830R5.jpg" />
+    <None Include="Resources\D648N7.jpg" />
+    <None Include="Resources\B538G6.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
